deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app
spec:
  selector:
    matchLabels:
      app: portfolio
  replicas: 1
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio-web-app
        image: portfolio:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-app-service
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
      #nodePort: 30011
