ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portfolio-ingress
  #annotations:
  #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: puneet-sharma-portfolio.com
    http:
      paths:
      - backend:
          serviceName: portfolio-app-service
          servicePort: 80
        path: /
